--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.15)
 
-project(httpserver)
+project(httpserver_test)
 
 set(CMAKE_CXX_REQUIRED 11)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
@@ -14,3 +14,8 @@ add_executable(Webbench webbench/webbench.c)
 target_compile_options(Webbench PUBLIC -O2)
 
 add_executable(TestHttpConn TestHttpConn.cc)
+
+add_executable(TestBlockQueue TestBlockQueue.cc)
+target_include_directories(TestBlockQueue PUBLIC "../src")
+target_link_options(TestBlockQueue PUBLIC -pthread)
+target_compile_options(TestBlockQueue PUBLIC -pthread)
