--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,3 +19,8 @@ add_executable(TestBlockQueue TestBlockQueue.cc)
 target_include_directories(TestBlockQueue PUBLIC "../src")
 target_link_options(TestBlockQueue PUBLIC -pthread)
 target_compile_options(TestBlockQueue PUBLIC -pthread)
+
+add_executable(TestAsyncLogger TestAsyncLogger.cc ../src/logger/AsyncLogger.cc)
+target_include_directories(TestAsyncLogger PUBLIC "../src")
+target_link_options(TestAsyncLogger PUBLIC -pthread)
+target_compile_options(TestAsyncLogger PUBLIC -pthread -Og -g)
